--- a/package.json
+++ b/package.json
@@ -9,11 +9,19 @@
     "start": "npm-run-all --parallel open:src lint:watch",
     "open:src": "babel-node server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src",
-    "lint:watch": "npm run lint -- --watch"
+    "lint:watch": "npm run lint -- --watch",
+    "clean-dist": "npm run remove-dist && mkdir dist",
+    "remove-dist": "node_modules/.bin/rimraf ./dist",
+    "build:html": "babel-node tools/buildHtml.js",
+    "prebuild": "npm-run-all clean-dist lint build:html",
+    "build": "babel-node tools/build.js",
+    "postbuild": "babel-node tools/distServer.js"
   },
   "dependencies": {
     "babel-polyfill": "6.8.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "cheerio": "^1.0.0-rc.2",
+    "compression": "^1.7.1",
+    "extract-text-webpack-plugin": "1.0.1",
     "node-sass": "^4.7.2",
     "react": "15.0.2",
     "react-dom": "15.0.2",
