--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "postbuild": "babel-node tools/distServer.js"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.0",
+    "@fortawesome/fontawesome-free-brands": "^5.0.2",
+    "@fortawesome/fontawesome-free-solid": "^5.0.2",
+    "@fortawesome/react-fontawesome": "^0.0.17",
     "babel-polyfill": "6.8.0",
-    "cheerio": "^1.0.0-rc.2",
     "compression": "^1.7.1",
     "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "^1.1.5",
+    "font-awesome": "^4.7.0",
     "node-sass": "^4.7.2",
     "react": "15.0.2",
     "react-dom": "15.0.2",
     "react-router": "2.4.0",
+    "react-router-dom": "^4.2.2",
+    "reset-css": "^2.2.1",
     "sass-loader": "^6.0.6"
   },
   "devDependencies": {
@@ -36,6 +43,7 @@
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.8.0",
+    "cheerio": "^1.0.0-rc.2",
     "css-loader": "^0.28.7",
     "eslint": "2.9.0",
     "eslint-plugin-import": "1.6.1",
@@ -46,7 +54,7 @@
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "style-loader": "0.13.1",
-    "url-loader": "0.5.7",
+    "url-loader": "^0.6.2",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
     "webpack-hot-middleware": "2.10.0"
