--- a/package.json
+++ b/package.json
@@ -22,18 +22,23 @@
     "@fortawesome/fontawesome-free-brands": "^5.0.2",
     "@fortawesome/fontawesome-free-solid": "^5.0.2",
     "@fortawesome/react-fontawesome": "^0.0.17",
+    "animate.css": "^3.5.2",
     "babel-polyfill": "6.8.0",
     "compression": "^1.7.1",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
+    "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "react": "15.0.2",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "15.0.2",
     "react-router": "2.4.0",
     "react-router-dom": "^4.2.2",
+    "react-scroll-to-component": "^1.0.2",
     "reset-css": "^2.2.1",
-    "sass-loader": "^6.0.6"
+    "sass-loader": "^6.0.6",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "6.8.0",
