--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "font-awesome": "^4.7.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "react": "15.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "15.0.2",
