--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["react", "es2015"]
+  "presets": ["es2015", "react", "stage-2"],
+  "plugins": [
+    "transform-class-properties",
+    "transform-flow-strip-types"
+  ]
 }
