--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,12 @@
 {
   "extends": [
     "eslint:recommended",
+    "plugin:flowtype/recommended",
     "plugin:import/errors",
     "plugin:import/warnings"
   ],
   "plugins": [
+    "flowtype",
     "react"
   ],
   "parserOptions": {
