--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
     "build:html": "babel-node tools/buildHtml.js",
-    "prebuild": "npm-run-all clean-dist lint build:html",
+    "prebuild": "npm-run-all clean-dist build:html",
     "build": "babel-node tools/build.js",
     "postbuild": "babel-node tools/distServer.js"
   },
@@ -23,30 +23,39 @@
     "@fortawesome/fontawesome-free-solid": "^5.0.2",
     "@fortawesome/react-fontawesome": "^0.0.17",
     "animate.css": "^3.5.2",
+    "babel-eslint": "^8.2.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-polyfill": "6.8.0",
+    "babel-preset-stage-2": "^6.24.1",
     "compression": "^1.7.1",
+    "eslint-plugin-flowtype": "^2.42.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "^1.1.5",
     "font-awesome": "^4.7.0",
     "json-loader": "^0.5.7",
     "node-sass": "^4.7.2",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "prop-types": "^15.6.0",
     "react": "15.0.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "15.0.2",
+    "react-redux": "^5.0.6",
     "react-router": "2.4.0",
     "react-router-dom": "^4.2.2",
     "react-scroll-to-component": "^1.0.2",
+    "redux": "^3.7.2",
     "reset-css": "^2.2.1",
     "sass-loader": "^6.0.6",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
-    "babel-cli": "6.8.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "6.8.0",
     "babel-loader": "6.2.4",
     "babel-plugin-react-display-name": "2.0.0",
     "babel-preset-es2015": "6.6.0",
+    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "6.5.0",
     "babel-register": "6.8.0",
     "cheerio": "^1.0.0-rc.2",
@@ -57,6 +66,7 @@
     "eslint-watch": "2.1.11",
     "eventsource-polyfill": "0.9.6",
     "express": "4.13.4",
+    "flow-bin": "^0.64.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
     "style-loader": "0.13.1",
